# aptos-core

./: .gitignore  CODEOWNERS  Cargo.toml  Justfile  calculate_peer_id.rs  metrics_scraper.sh  movement.rb  package-lock.json  rust-toolchain.toml  telemetry_bridge.py  telemetry_bridge_with_auth.py
.github/workflows/: build-versions.yaml  docker-build-test.yaml  docker-build.yml  fuzzer-test.yaml  pull-request-validation.yaml
aptos-move/aptos-vm/: Cargo.toml
aptos-move/aptos-vm-logging/: Cargo.toml
aptos-move/block-executor/: Cargo.toml
aptos-node/src/: lib.rs
crates/aptos-drop-helper/: Cargo.toml
crates/aptos-telemetry/: Cargo.toml
docker/aptos-faucet-service/: Dockerfile
docker/aptos-node/: Dockerfile  README.md
docker/builder/: build-indexer.sh  build-tools.sh  docker-bake-rust-all.hcl  tools.Dockerfile
execution/block-partitioner/: Cargo.toml
execution/executor/: Cargo.toml
execution/executor-service/: Cargo.toml
execution/executor-types/: Cargo.toml
movement-migration/framework-upgrades/: Move.toml  feature-reconfigure.move
movement-migration/validation-tool/: Cargo.toml
scripts/: migration-governance.sh  migration-upgrade-framework.sh
storage/aptosdb/: Cargo.toml
storage/aptosdb/src/: lib.rs  (+5 more)
storage/indexer/: Cargo.toml
storage/jellyfish-merkle/: Cargo.toml
storage/schemadb/: Cargo.toml
storage/scratchpad/: Cargo.toml
storage/storage-interface/: Cargo.toml
tools/l1-migration/: Cargo.toml
tools/network_address_encoder/: Cargo.toml  README.md  validator-onchain-discovery.md
tools/network_address_encoder/src/: main.rs
(+192 files in other folders)
