[package]
name = "network_address_encoder"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Use local aptos-types for NetworkAddress
aptos-types = { path = "../../types" }
# BCS for serialization
bcs.workspace = true
# CLI argument parsing
clap = { workspace = true, features = ["derive"] }
# Error handling
anyhow.workspace = true
# Hex encoding for output
hex.workspace = true
# JSON for structured output
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
